Fix spacing on disqus comments

--- a/static/sass/_disqus.scss
+++ b/static/sass/_disqus.scss
@@ -108,7 +108,7 @@ details.static-comments-empty > summary::-webkit-details-marker {
 	.static-comments-hed {
 		align-items: center;
 	}
-	.static-comments-webmentions .static-comments-msg {
+	.static-comments-msg {
 		padding-left: calc(30px + .5em);
 	}
 	.static-comments-date br {
